# chorum

./: .env  Cargo.toml  README.md  haich2.db
migrations/: 001_initial_schema.sql  002_user_personal_21e8.sql
src/: config.rs  db.rs  error.rs  main.rs  models.rs  pow.rs
src/handlers/: api.rs  boards.rs  home.rs  mod.rs  threads.rs
src/templates/: mod.rs
